# pure-vanilla

./: .gitignore  Example  ExampleLib  README  VanillaCore.hs  VanillaParser.hs  ast.rkt  ccc.rkt  ccc2.rkt  ccc3.rkt  constructor.rkt  eval.rkt  even-simpler-expander-experiment.rkt  example.rkt  example2.rkt  interp.rkt  loader.toplevel  macro-ast.rkt  parse.rkt  parser-experiment.rkt  precedence.rkt  prototype.hs  prototype.rkt  pure-vanilla.cabal  rewriter.rkt  self-compile.rkt  simple-expander-experiment.rkt  simplify.rkt  stack.yaml  test-advent.sh  toplevel.rkt  vanilla-compile.rkt  vanilla-lang.rkt  vanilla-parse.rkt  vanilla.rkt  wc.hs
examples/: Advent_1.rkt  Advent_2  Advent_3  Advent_3.output  BigInt_BigRat.min.js  Foo  Prelude  SelfCompile  SelfTest  Syntax  base.js  demo.html  fib  hello  self-compile.rkt  wc  wc2
examples/advent2016/: 1  1.output  1.rkt  2  2.output  3  4
racket-vanilla/: compile.rkt  util.rkt
src/: ExampleWordCount.hs  Main.hs  Str.hs  Test.hs  VanillaCore.hs  VanillaJS.hs  VanillaParser.hs  VanillaPrinter.hs  VanillaServer.hs  wc.hs
src/Language/Vanilla/: Core.hs  Eval.hs  JS.hs  Parser.hs  Prims.hs  Printer.hs  Server.hs
static/: index.html
vanilla/: compile.rkt  lang.rkt  main.rkt  parse.rkt  runtime.rkt
