name:                pure-vanilla
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dpercy/pure-vanilla
author:              David Pery
maintainer:          davetp425@gmail.com
copyright:           2016 David Percy
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pure-vanilla
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       VanillaCore, VanillaParser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , parsec
                     , QuickCheck

test-suite test-pure-vanilla
  hs-source-dirs:      src
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , parsec
                     , QuickCheck
